Fixed overflow

--- a/src/components/Pages/Experiences/Experiences.module.css
+++ b/src/components/Pages/Experiences/Experiences.module.css
@@ -4,7 +4,9 @@
   flex-direction: column;
   justify-content: center;
   height: 100%;
+  z-index: 2;
 }
+
 
 .TitleContainer {
     display: flex;
